<resources>
    <string name="app_name">InboundLogin</string>
    <string name="title_activity_team_registration">TeamRegistration</string>
    <string name="enteruser">Enter Username</string>
    <string name="enterpass">Enter Password</string>
    <string name="confpass">Confirm Password</string>
    <string name="start">START</string>
    <string name="reset">RESET</string>
    <string name="quart">QUARTER : </string>
    <string name="team1">TEAM 1</string>
    <string name="team2">TEAM 2</string>
    <string name="plus1">+1</string>
    <string name="plus2">+2</string>
    <string name="plus3">+3</string>
    <string name="timestart">00:00</string>
    <string name="sixseveneight">678</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="teamname">Team Name</string>
    <string name="coachname">Coach\'s Name</string>
    <string name="playerno">Number of Players</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="scorekeeper">Scorekeeper</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="alreadyhaveaccount">Already have an account?</string>
    <string name="done">Done</string>
    <string name="ighandle">Instagram Handle</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="addplayer">Add Player</string>
    <string name="finish">Finish</string>
    <string name="playerdetails">Player Details</string>
    <string name="back">Back</string>
    <string name="logo">LOGO</string>
    <string name="teamregis">Team Registration</string>
    <string name="condition">Conditioning</string>
    <string name="bdrills">Basketball Drills</string>
    <string name="logout">Logout</string>
    <string name="enterfullname">Enter Full Name</string>
    <string name="copyright">© Created by Arjun Joshua and Thomas Abraham</string>
    <string name="userprofile">User Profile</string>
    <string name="playerstats">Player Statistics</string>
    <string name="newpass">New Password</string>
    <string name="oldpass">Old Password</string>
    <string name="update">Update</string>
    <string name="changepass">Change Password</string>
    <string name="zerozero">00</string>
    <string name="ten">10</string>
    <string name="livescoreboard">Live Scoreboard</string>
    <string name="conditioning">Conditioning</string>
    <string name="bballdrillsabout">There are multiple basic basketball drills that must be mastered in order to make an effective contribution on the court. The most essential drills are : \n\n -> Layups \n -> Field Goal Shooting \n -> Standard Defensive Tactics</string>
    <string name="stepstaken">Steps Taken</string>
    <string name="calsburnt">Cals. Burnt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
