<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TeamRegistration"
    tools:showIn="@layout/activity_team_registration">

    <EditText
        android:id="@+id/TeamName"
        android:layout_width="230dp"
        android:layout_height="65dp"
        android:autofillHints="Please Enter a Team Name"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/teamname"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.250" />

    <EditText
        android:id="@+id/CoachName"
        android:layout_width="230dp"
        android:layout_height="65dp"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/coachname"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <EditText
        android:id="@+id/PlayerNo"
        android:layout_width="230dp"
        android:layout_height="65dp"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/playerno"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.550" />

    <Button
        android:id="@+id/btnnext"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="#F79123"
        android:fontFamily="@font/comfortaa"
        android:text="@string/next"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

    <Button
        android:id="@+id/btncancel"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="#F79123"
        android:fontFamily="@font/comfortaa"
        android:text="@string/cancel"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />


</androidx.constraintlayout.widget.ConstraintLayout>