<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="450dp"
    android:layout_height="150dp"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:background="#FAA7B4B6"
    tools:context=".PlayerInfoAdd">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/Player_Number"
        android:layout_width="85dp"
        android:layout_height="49dp"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/number"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btndone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <EditText
        android:id="@+id/Player_id"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/ighandle"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <EditText
        android:id="@+id/Player_Name"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/name"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303"
        android:inputType="text" />

    <Button
        android:id="@+id/btndone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F79123"
        android:fontFamily="@font/comfortaa"
        android:text="@string/done"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

</androidx.constraintlayout.widget.ConstraintLayout>