<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inbound_login">

    <EditText
        android:id="@+id/password"
        android:layout_width="238dp"
        android:layout_height="69dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/enterpass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <EditText
        android:id="@+id/username"
        android:layout_width="238dp"
        android:layout_height="69dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/enteruser"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <Button
        android:id="@+id/button4"
        android:layout_width="121dp"
        android:layout_height="54dp"
        android:backgroundTint="#F79123"
        android:fontFamily="@font/comfortaa"
        android:text="@string/back"
        android:textColor="#090606"
        android:textColorHighlight="#090606"
        android:textColorHint="#090606"
        android:textColorLink="#090606"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

    <Button
        android:id="@+id/button3"
        android:layout_width="121dp"
        android:layout_height="57dp"
        android:backgroundTint="#F79123"
        android:fontFamily="@font/comfortaa"
        android:text="@string/login"
        android:textColor="#090606"
        android:textColorHighlight="#090606"
        android:textColorHint="#090606"
        android:textColorLink="#090606"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="281dp"
        android:layout_height="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@drawable/inboundlogo" />

</androidx.constraintlayout.widget.ConstraintLayout>